--- a/master_main.conf
+++ b/master_main.conf
@@ -5,4 +5,8 @@ fileserver_backend:
   - git
 
 gitfs_remotes:
-  - file://vm_shared/salt_root
+  - file:///vm_shared/:
+    - root: salt_root
+  - https://github.com/kaidokert/newrelic-formula.git
+  - https://github.com/kaidokert/collectd-formula.git
+  - https://github.com/saltstack-formulas/couchdb-formula.git
